--- a/src/styles.css
+++ b/src/styles.css
@@ -1,36 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,400,700');
-
-*{                                /*  выравнивание общее  */
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+/* ----------------------------ТЕЛО--------------------------------------- */
+body {
+  background-image: linear-gradient(green, yellow, deepskyblue);;
+  font: 14px/20px "Lato", Arial, sans-serif;
+  padding: 40px 0;
+  color: white;
+}
+/* ----------------------------ГЛАВНЫЙ БЛОК -КОНТЕЙНЕР --------------------------------------- */
+.container {                                  /*  главный блок (контейнер) */
+  margin: 0 auto;
+  width: 890px;                               /*  ширина всего чата */
+  background: #333333;                        /*  фон списка пользователей */
+  border-radius: 10px;
+}
+/* -------------------------------БЛОК ПОЛЬЗОВАТЕЛЕЙ ------------------------------------------ */
+.people-list {                                 /* распределяем и выравниваем отдельно список участников  */
+  width: 400px;                               /*  ширина списка пользователей */
+  float: left;                                /*  расположение списка пользователей */
 }
 
-html{                              /*  спец размер и шрифты под сообщения и др.  */
-	font-family: "Roboto", sans-serif;
-	font-weight: 100;
-	font-size: 1-px;
+.people-list .left-header  {                             
+  width: 400px; 
+  float: left; 
+  padding-top: 15px;                              /*  отступы  */
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid white;                 /*  добавил белую границу чтоб было гармонично */
 }
-
-#wrapper{                          /*  выравнивание обертки списка учатников  */
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 2rem;
-	background-color: #b5b5b7;
-	color: #ff;
-}
-
-.container{                         /*  основной контейнер чата  */
-	width: 60%;
- 	height: 80%;
-	display: flex;
-	box-shadow: 1rem 2rem 4rem rgba(0,0,0,0.2);
-	min-width: 60rem;
-}
-
 
 
 
