--- a/src/styles.css
+++ b/src/styles.css
@@ -32,42 +32,68 @@ body {
   border-bottom: 2px solid white;                 /*  добавил белую границу чтоб было гармонично */
 }
 
-
-
-
-.online{                              /*  кружок online  */
-	background-color: #4ad99b;
-	width: 2rem;
-	height: 2rem;
-	border-radius: 50%;
-	position: absolute;
-	left: 6.5rem;
-	bottom: 1.5rem;
+.settings {
+	float: left; 
 }
 
-.offline{                              /*  кружок offline + изменение в index.html offline на online offline */
-	background-color: #fa676a;
+ .timeonline {
+	float: left; 
+  	width: 110px; 
+	height: 60px;
+  	margin-top: 0px;
+	margin-bottom: 0px;
+  	margin-left: 20px;
+	padding-top: 0px;                              /*  отступы  */
+  	padding-left: 10px;
 }
 
-.users ul li .online{                      /*  добавление эффектов кружкам online и offline */
-	border: 2px solid #fff;
+.youstatus {                                     /* ваш цвет статуса online offline */
+  color: yellow;
 }
 
-.users-list{                            /*  центрирование подписей пользователей */
-	flex-grow: 2;
-	margin: auto 0;
+.people-list ul {                               /* отступы списка пользователей от краев чата */
+  margin-top: 0px;                             /* добавил чтоб плотно прилегало к верхней границе левого хедера */
+  padding: 20px;
+  height: 566px;
+  overflow-y: scroll;                         /* добавление бегунка */
+  border-bottom: 2px solid white;             /*  добавил белую границу чтоб было гармонично */
 }
 
-.text{                                  /*  уменьшение размера текста под именем */
-	font-size: 0.5rem;
-	margin: auto 0;
+.people-list ul li {                             /* вертикальные расстояния между пользователями */
+  padding-bottom: 20px;
 }
 
-.timestamp{                             /*  характеристики поля "время сообщения"  */
-	font-size: 0.5rem;
-	flex-grow: 0.3;
-	margin: auto 0;
+.people-list ul li:hover {                             /* добавил выделение области пользователя при наведении */
+  background-color: #6A6C75;
+  border-radius: 20px;
 }
+
+.people-list ul li:active {                 /*  Цвет букв меняется при нажатии на кнопку  */
+ background-color: #01a715;
+ border-radius: 20px;
+}
+
+.people-list img {                             /*  размещение фотографий пользовалетей слева от текста */
+  float: left;
+}
+
+.people-list .about {                          /*  стили класса about, теперь все выровнено в границах чата */
+  float: left;
+  margin-top: 8px;
+}
+
+.people-list .about {                          /* горизонтальный отступ фото и имен пользователей */
+  padding-left: 8px;
+}
+
+.people-list .status {                         /* цвет статуса online offline */
+  color: yellow;
+}
+
+
+
+
+
 
 #chat-screen{
 	display: flex;
