add chat-history block styles (css)

--- a/src/styles.css
+++ b/src/styles.css
@@ -143,3 +143,58 @@ body {
   clear: both;                                 /* так виден фон блока пользователей */
   height: 0;                                   /* ничего */
 }
+/* -------------------------------БЛОК ИСТОРИИ ЧАТА------------------------------------------ */
+.chat .chat-history .message-data {
+  margin-bottom: 15px;                         /*  расстояние от границ  блока и между сообщениями в истории чата  */ 
+}
+
+.chat .chat-history .message-data-time {         /* время сообщений в истории чата */
+  color: #a8aab1;                              /* серый */
+  padding-left: 10px;                          /* отступ от имени пользователя, что написал сообщение */
+}
+
+.chat .chat-history .my-message {                /* цвет прамоугольника вашего сообщения в чате */  
+  background: #90EE90;
+}
+
+.chat .chat-history .other-message {             /* цвет прамоугольника вашего оппонента в чате */
+  background: #40e0d0;
+}
+
+.chat .chat-history .message {                   /*  характеристики блоков текста в истории чатов */
+  color: white;                                 /* цвет текста в блоке */
+  padding: 18px 25px;                           /* расстояние текста до границ блока сообщения */
+  line-height: 26px;                            /* высота блока сообщения */
+  font-size: 16px;                              /* размер шрифта */
+  border-radius: 20px;                          /* окружности на углах */
+  margin-bottom: 30px;                          /* вергтикальное расстояние между блоками сообщений */
+  width: 90%;                                   /* процент ширины блока сообщения отновительно блока */
+  position: relative;                           /* вместе с координатами */
+}
+
+.chat .chat-history .message:after {              /* характеристики треугольников над блоками сообщений */
+  bottom: 100%;                                 /* положение треугольника вверху блока сообщения на 100% */
+  left: 10%;                                    /* выравнивание слева треугольника над прямоугольником вашего оппонента в чате */
+  border: solid transparent;                    /* Прозрачные границы */
+  content: " ";                                 /* без этого свойства треугольник пропадает */
+  height: 0;                                    /* ничего */
+  width: 0;                                     /* ничего */
+  position: absolute;                           /* треугольник исчезает с места и позиционируется заново */
+  pointer-events: none;                         /* ничего */
+  border-bottom-color: #90EE90 ;                /* цвет треугольника над прямоугольником сообщения вашего оппонента в чате */
+  border-width: 10px;                           /* высота и ширина треугольника */
+  margin-left: -10px;                           /* сдвиг треугольника влево */
+}
+
+.chat .chat-history .other-message:after {
+  border-bottom-color: #40E0D0;                 /* цвет треугольника над прямоугольником вашего сообщения в чате */
+  left: 92%;                                    /* выравнивание треугольника над прямоугольником вашего сообщения в чате */
+}
+
+.float-right {                                   /* размещение блоков сообщений по разные стороны друг от друга */
+  float: right;
+}
+
+.align-right {                                   /* размещение имен учатников по разные стороны друг от друга */
+  text-align: right;
+}
