--- a/src/styles.css
+++ b/src/styles.css
@@ -334,3 +334,31 @@ label[for='two'].threebuttons , label[for='three'].threebuttons{
 input[type='radio']:checked + label{
     color: #00CD0A;                                /*  цвет активной кнопки-иконки */        
 }
+/* ------------------------ отображение новых непрочитанных сообщений ---------------------------------------- */
+
+.come_message {
+	float: left; 
+	margin-left: 150px  ;
+	width: 28px;
+	height: 28px;
+	position: absolute;
+}
+
+.countMe {
+  position: absolute;       
+  height:16px;
+  width: 26px;
+  top: 32px;                      /* отступ сверху до окружности */
+  left: 60px;                     /* отступ слева до окружности */
+  font-size: 15px;                /* размер шрифта */
+  border: 4px solid #6A6C75;      /* серый цвет границы */
+  border-radius: 55px;            /* округлые углы */
+  padding-left:  1px;             /* отступы от числа до границы окружноти */
+  padding-right:  1px; 
+  padding-top:  1px; 
+  padding-bottom:  18px; 
+  margin: 2px;
+  background-color: yellow;       /* фон окружности */
+  font-family:  'bowlby-one';
+  color: grey;
+}
