--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,10 +1,464 @@
-$color: teal;
 
-h1 {
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-  background-color: $color;
+li {
+  list-style-type: none; 
+}
+ul {
+  margin-left: 0;             /* Отступ слева в браузере IE и Opera */
+  padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
+}
+
+@import url(https://fonts.googleapis.com/css?family=Lato:400, 700);
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+/* ----------------------------ТЕЛО--------------------------------------- */
+body {
+  background-image: linear-gradient(green, yellow, deepskyblue);
+  font: 14px/20px "Lato", Arial, sans-serif;
+  padding: 40px 0;
   color: white;
-  text-align: center;
+}
+/* ----------------------------ГЛАВНЫЙ БЛОК -КОНТЕЙНЕР --------------------------------------- */
+.container {
+  /*  главный блок (контейнер) */
+  margin: 0 auto;
+  width: 890px; /*  ширина всего чата */
+  background: #333333; /*  фон списка пользователей */
+  border-radius: 10px;
+}
+/* -------------------------------БЛОК ПОЛЬЗОВАТЕЛЕЙ ------------------------------------------ */
+.people-list {
+  /* распределяем и выравниваем отдельно список участников  */
+  width: 400px; /*  ширина списка пользователей */
+  float: left; /*  расположение списка пользователей */
+}
+
+.people-list .left-header {
+  width: 400px;
+  float: left;
+  padding-top: 15px; /*  отступы  */
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid white; /*  добавил белую границу чтоб было гармонично */
+}
+
+.settings {
+  float: left;
+}
+
+.timeonline {
+  float: left;
+  width: 110px;
+  height: 60px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  padding-top: 0px; /*  отступы  */
+  padding-left: 10px;
+}
+
+.youstatus {
+  /* ваш цвет статуса online offline */
+  color: yellow;
+}
+
+.people-list ul {
+  /* отступы списка пользователей от краев чата */
+  margin-top: 0px; /* добавил чтоб плотно прилегало к верхней границе левого хедера */
+  padding: 20px;
+  height: 566px;
+  overflow-y: scroll; /* добавление бегунка */
+  border-bottom: 2px solid white; /*  добавил белую границу чтоб было гармонично */
+}
+
+.people-list ul li {
+  /* вертикальные расстояния между пользователями */
+  padding-bottom: 20px;
+}
+
+.people-list ul li:hover {
+  /* добавил выделение области пользователя при наведении */
+  background-color: #6a6c75;
+  border-radius: 20px;
+}
+
+.people-list ul li:active {
+  /*  Цвет букв меняется при нажатии на кнопку  */
+  background-color: #01a715;
+  border-radius: 20px;
+}
+
+.people-list img {
+  /*  размещение фотографий пользовалетей слева от текста */
+  float: left;
+}
+
+.people-list .about {
+  /*  стили класса about, теперь все выровнено в границах чата */
+  float: left;
+  margin-top: 8px;
+}
+
+.people-list .about {
+  /* горизонтальный отступ фото и имен пользователей */
+  padding-left: 8px;
+}
+
+.people-list .status {
+  /* цвет статуса online offline */
+  color: yellow;
+}
+
+/* --------------------------------------БЛОК ЧАТА------------------------------------------ */
+.chat {
+  /* параметры чата */
+  width: 490px; /* ширина истории чата */
+  float: left; /* размещение панели истории чата */
+  background: #d3ffce; /*  Цвет фона истории  чата*/
+  border-top-right-radius: 10px; /*  верхний правый сглаженный угол истории  чата*/
+  border-bottom-right-radius: 10px; /*  нижний правый сглаженный угол истории  чата*/
+  color: #3d3839; /*  Цвет текста истории чата*/
+}
+
+.chat .chat-header {
+  /* граница между хедером и историей чата*/
+  padding: 15px;
+  border-bottom: 2px solid white;
+  background: #6a6c75; /* добавил другой цвет фона хедера */
+  width: 490px; /* ширина блока хедера чата */
+}
+
+.chat .chat-header img {
+  /* размещение картинки аватарки в хедере слева от текста */
+  float: left;
+}
+
+.chat .chat-header .chat-with {
+  /* характеристики текста в хедере истории чатов */
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.chat .chat-header .chat-num-messages {
+  /*  цвет текста количества сообщений в хедере истории чатов   */
+  color: #40e0d0;
+}
+
+/* -------------------------------ХЕДЕР ЧАТА (ПРАВЫЙ ХЕДЕР)------------------------------------------ */
+.chat .chat-header .chat-about {
+  /* отступы текста в хедере истории чатов */
+  float: left; /* левее , ближе к аватарке */
+  padding-left: 20px; /* левое расстояние от аватарки до текста */
+  margin-top: 6px; /* отступ текста от верхнего края блока хедера */
+}
+
+.chat .chat-history {
+  /* характеристики окна истории чатов */
+  padding: 30px 30px 20px;
+  border-bottom: 2px solid white; /* нижняя граница между историей чатов и textarea */
+  overflow-y: scroll; /* добавление бегунка */
+  height: 512px; /*  высота истории чата   */
+  width: 490px; /* ширина блока истории чата */
+}
+
+.clearfix:after {
+  /* характеристики основного блока пользователей  */
+  visibility: hidden; /* ничего */
+  display: block; /* отображать как блок */
+  font-size: 0; /* ничего */
+  content: " "; /* так виден фон блока пользователей */
+  clear: both; /* так виден фон блока пользователей */
+  height: 0; /* ничего */
+}
+/* -------------------------------БЛОК ИСТОРИИ ЧАТА------------------------------------------ */
+.chat .chat-history .message-data {
+  margin-bottom: 15px; /*  расстояние от границ  блока и между сообщениями в истории чата  */
+}
+
+.chat .chat-history .message-data-time {
+  /* время сообщений в истории чата */
+  color: #a8aab1; /* серый */
+  padding-left: 10px; /* отступ от имени пользователя, что написал сообщение */
+}
+
+.chat .chat-history .my-message {
+  /* цвет прамоугольника вашего сообщения в чате */
+  background: #90ee90;
+}
+
+.chat .chat-history .other-message {
+  /* цвет прамоугольника вашего оппонента в чате */
+  background: #40e0d0;
+}
+
+.chat .chat-history .message {
+  /*  характеристики блоков текста в истории чатов */
+  color: white; /* цвет текста в блоке */
+  padding: 18px 25px; /* расстояние текста до границ блока сообщения */
+  line-height: 26px; /* высота блока сообщения */
+  font-size: 16px; /* размер шрифта */
+  border-radius: 20px; /* окружности на углах */
+  margin-bottom: 30px; /* вергтикальное расстояние между блоками сообщений */
+  width: 90%; /* процент ширины блока сообщения отновительно блока */
+  position: relative; /* вместе с координатами */
+}
+
+.chat .chat-history .message:after {
+  /* характеристики треугольников над блоками сообщений */
+  bottom: 100%; /* положение треугольника вверху блока сообщения на 100% */
+  left: 10%; /* выравнивание слева треугольника над прямоугольником вашего оппонента в чате */
+  border: solid transparent; /* Прозрачные границы */
+  content: " "; /* без этого свойства треугольник пропадает */
+  height: 0; /* ничего */
+  width: 0; /* ничего */
+  position: absolute; /* треугольник исчезает с места и позиционируется заново */
+  pointer-events: none; /* ничего */
+  border-bottom-color: #90ee90; /* цвет треугольника над прямоугольником сообщения вашего оппонента в чате */
+  border-width: 10px; /* высота и ширина треугольника */
+  margin-left: -10px; /* сдвиг треугольника влево */
+}
+
+.chat .chat-history .other-message:after {
+  border-bottom-color: #40e0d0; /* цвет треугольника над прямоугольником вашего сообщения в чате */
+  left: 92%; /* выравнивание треугольника над прямоугольником вашего сообщения в чате */
+}
+
+.float-right {
+  /* размещение блоков сообщений по разные стороны друг от друга */
+  float: right;
+}
+
+.align-right {
+  /* размещение имен учатников по разные стороны друг от друга */
+  text-align: right;
+}
+/* -------------------------------БЛОК textarea (right footer)----------------------------------- */
+.chat .chat-message {
+  /* Отступы textarea */
+  padding: 30px;
+  background: #6a6c75; /* добавил другой цвет фона в котором textarea */
+  border-bottom-right-radius: 10px; /* скорректировал нижний округлый угол */
+}
+
+.chat .chat-message textarea {
+  /* характеристики textarea */
+  width: 100%; /* ширина чата в процентах относительно уже заданной */
+  padding: 10px 20px; /* отступы текста от границ textarea */
+  margin-bottom: 10px; /* нижний отступ textarea от внешних границ */
+  border-radius: 5px; /* округлость углов textarea */
+  background: #53f3e3; /* фон */
+  color: DarkBlue; /* цвет шрифта */
+  font: 18px/22px "Lato", Arial, sans-serif; /* параметры шрифта */
+  resize: none; /* запрет ручного изменения размера поля textarea */
+}
+
+.chat .chat-message button {
+  /* характеристики кнопки */
+  float: right; /* кнопка справа */
+  color: #40e0d0; /* цвет самой кнопки отправить (не нажатой)  */
+  font-size: 16px; /* размер шрифта кнопки */
+  text-transform: uppercase; /* большими буквами */
+  border: none; /* нет границы */
+  cursor: pointer; /* курсор изменяется при наведении на кнопку */
+  font-weight: bold; /* жирный текст кнопки */
+  background: #6a6c75; /* цвет фона кнопки отправить  */
+}
+
+.chat .chat-message button:hover {
+  /*  Цвет букв меняется при навелении курсора на кнопку  */
+  color: #0000ff; /*  Цвет букв меняется при навелении курсора на кнопку  */
+  -webkit-transform: scale(
+    1.2
+  ); /*  увеличение при навелении курсора на кнопку  */
+}
+
+.chat .chat-message button:active {
+  /*  Цвет букв меняется при нажатии на кнопку  */
+  color: #01a715;
+}
+/* ------------------------ДАЛЕЕ СТИЛИЗАЦИЯ ИКОНОК FONT-AWESOME---------------------------------- : */
+
+.people-list .fa-comment-o {
+  /* стили иконки сообщения */
+  position: relative;
+  right: -40px; /* сдвиг иконки поиска влево */
+  font-size: 40px;
+  color: #40e0d0;
+  margin-top: 8px;
+}
+
+.people-list .fa-cog {
+  /* стили иконки настроек (settings) */
+  position: relative;
+  right: -100px; /* сдвиг иконки поиска влево */
+  font-size: 40px;
+  color: #40e0d0;
+  margin-top: 10px;
+}
+
+.chat .chat-header .fa-star {
+  /* стили иконки звезда */
+  float: right;
+  color: Aqua;
+  font-size: 20px;
+  margin-top: 12px;
+}
+
+.fa-star {
+  /* стили иконки звезда */
+  cursor: pointer; /* меняется курсор при наведении (тут срабатывает лишь отдельно) */
+}
+
+.chat .fa-star:active {
+  color: MediumBlue;
+}
+
+.chat .chat-message .fa-paperclip,
+.chat .chat-message .fa-file-image-o {
+  /* стили иконок прикрепления файлов */
+  font-size: 18px;
+  color: #53f3e3; /* изменил цвет на облачный */
+  cursor: pointer; /* меняется курсор при наведении */
+}
+
+.chat .chat-message .fa-paperclip:active {
+  color: MediumBlue;
+}
+
+.chat .chat-message .fa-file-image-o:active {
+  color: MediumBlue;
+}
+
+.online {
+  /* цвет иконок online в списке учатников */
+  color: #86bb71; /* зеленые */
+}
+
+.offline {
+  /* цвет иконок offline в списке учатников */
+  color: #e38968; /* оранжевые */
+}
+
+.me {
+  /* цвет иконок для личных сообщений */
+  color: #86bb71; /* зеленые */
+}
+
+.online,
+.offline,
+.me {
+  /* выравнивание online offline иконок */
+  margin-right: 5px;
+  font-size: 8px;
+}
+/* ---------------------------- СТИЛИ ПОЛОС ПРОКРУТКИ ------------------------------ */
+::-webkit-scrollbar {
+  width: 15px;
+  height: 5px;
+} /* высота, ширина */
+::-webkit-scrollbar-button {
+  background-color: #6a6c75;
+} /* кнопки */
+::-webkit-scrollbar-track-piece {
+  background-color: #40e0d0;
+} /*  фон полосы */
+::-webkit-scrollbar-thumb {
+  height: 50px;
+  background-color: #6a6c75;
+  border-radius: 5px;
+} /*  бегунок */
+/* ------------------------ ПРАВОЕ МЕНЮ КНОПОК ---------------------------------------- */
+input[type="radio"] {
+  display: none; /*  скрывает радио-кнопки */
+}
+
+label.threebuttons {
+  /* блок с кнопками переключения  */
+  display: inline-block; /* БЛОКИ РАЗМЕЩЕНЫ В ЛИНИЮ разъезжается без этого стиля  */
+  padding: 33px 70px 33px 70px; /* размеры гвнешних границ иконок-кнопок  */
+  color: #40e0d0; /* цвет иконок-кнопок  */
+  font-size: 22px; /* величина шрифта иконок-кнопок  */
+  background: #6a6c75; /* цвет фона иконок-кнопок  */
+  border-radius: 10px; /* скорректировал верхний округлый угол */
+  border-top-left-radius: 10px; /* скорректировал верхний округлый угол */
+  border: 2px solid white;
+}
+
+label.threebuttons:hover {
+  color: #0000ff; /* цвет при наведении мышкой на иконки-кнопки */
+}
+
+label.threebuttons:hover {
+  background: #333333; /*  фон блока при наведения на блок кнопки-иконки */
+}
+
+label[for="two"].threebuttons,
+label[for="three"].threebuttons {
+  margin-left: -4px; /*  выравникание блоков-кнопок  */
+}
+
+input[type="radio"]:checked + label {
+  color: #00cd0a; /*  цвет активной кнопки-иконки */
+}
+/* ------------------------ отображение новых непрочитанных сообщений ---------------------------------------- */
+
+.come_message {
+  float: left;
+  margin-left: 150px;
+  width: 28px;
+  height: 28px;
+  position: absolute;
+}
+
+.countMe {
+  position: absolute;
+  height: 16px;
+  width: 26px;
+  top: 32px; /* отступ сверху до окружности */
+  left: 60px; /* отступ слева до окружности */
+  font-size: 15px; /* размер шрифта */
+  border: 4px solid #6a6c75; /* серый цвет границы */
+  border-radius: 55px; /* округлые углы */
+  padding-left: 1px; /* отступы от числа до границы окружноти */
+  padding-right: 1px;
+  padding-top: 1px;
+  padding-bottom: 18px;
+  margin: 2px;
+  background-color: yellow; /* фон окружности */
+  font-family: "bowlby-one";
+  color: grey;
+}
+/* ------------------------ отображения информации о введенном сообщении ---------------------------------------- */
+.messageinfo {
+  margin-left: 20px;
+}
+
+.displaysympols {
+  margin-left: 15px;
+  color: yellow;
+}
+
+.displayletters {
+  margin-left: 50px;
+  color: yellow;
+}
+
+.displayspaces {
+  margin-left: 11px;
+  color: yellow;
+}
+
+.displaypunctuation {
+  margin-left: 21px;
+  color: yellow;
+}
+/* ------------------------ отображение общего количества пользователей онлайн ---------------------------------------- */
+.onlinemembers {
+  margin-top: 101px;
+  margin-left: 84px;
+  color: yellow;
+  margin-bottom: 5px;
 }
