--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,7 +7,7 @@ ul {
   padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
 }
 
-@import url(https://fonts.googleapis.com/css?family=Lato:400, 700);
+/* @import url(https://fonts.googleapis.com/css?family=Lato:400, 700); */
 *,
 *:before,
 *:after {
