--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -383,13 +383,14 @@ input[type="radio"] {
 
 label.threebuttons {
   /* блок с кнопками переключения  */
-  display: inline-block; /* БЛОКИ РАЗМЕЩЕНЫ В ЛИНИЮ разъезжается без этого стиля  */
-  padding: 33px 70px 33px 70px; /* размеры гвнешних границ иконок-кнопок  */
-  color: #40e0d0; /* цвет иконок-кнопок  */
-  font-size: 22px; /* величина шрифта иконок-кнопок  */
-  background: #6a6c75; /* цвет фона иконок-кнопок  */
-  border-radius: 10px; /* скорректировал верхний округлый угол */
-  border-top-left-radius: 10px; /* скорректировал верхний округлый угол */
+  display: inline-flex;           /* БЛОКИ РАЗМЕЩЕНЫ В ЛИНИЮ разъезжается без этого стиля  */
+  padding: 33px 69px 33px 69px;  /* размеры гвнешних границ иконок-кнопок  */
+  align-items: center;
+  padding: auto;
+  color: #40e0d0;                /* цвет иконок-кнопок  */
+  font-size: 22px;               /* величина шрифта иконок-кнопок  */
+  background: #6a6c75;           /* цвет фона иконок-кнопок  */
+  border-radius: 10px;           /* скорректировал верхний округлый угол */
   border: 2px solid white;
 }
 
@@ -421,11 +422,11 @@ input[type="radio"]:checked + label {
 
 .countMe {
   position: absolute;       
-  height:15px;
+  height:19px;
   width: 27px;
-  top: 38px;                      /* отступ сверху до окружности */
-  left: 59px;                     /* отступ слева до окружности */
-  font-size: 17px;                /* размер шрифта */
+  top: 13px;                      /* отступ сверху до окружности */
+  left: 95px;                     /* отступ слева до окружности */
+  font-size: 16px;                /* размер шрифта */
   border: 4px solid #6A6C75;      /* серый цвет границы */
   border-radius: 55px;            /* округлые углы */
   padding-left:  1px;             /* отступы от числа до границы окружноти */
