--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,6 +7,108 @@ ul {
   padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
 }
 
+/* login form */
+.login-modal {
+    cursor: move;
+    display: inline-block;
+    border: 1px solid #CCC;
+    width: 300px;
+    height: auto;
+    text-align: center;
+    border-radius: 6px;
+    padding: 25px 7px;
+    background-image: #fff;
+    opacity: .79;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+}
+
+.brand-name {
+      color: #fff;
+      font-weight: 500;
+      font-size: 1.3em;
+}
+
+.input-field {
+    width: 250px;
+    height: auto;
+    margin: 8px auto;
+    border: 2px solid #dfebf2;
+    margin-bottom: 15px;
+    
+    border-radius: 3px;
+}
+
+.input-field:first-of-type {
+    margin-top: 20px;
+}
+
+input {
+    border-width: 0;
+    width: 100%;
+    outline: none;
+    padding: 4px 15px;
+}
+
+input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #ccc;
+}
+
+.btn {
+    border: 0px;
+    background-color: transparent;
+    padding: 5px 12px;
+    width: 250px;
+    border-radius: 3px;
+}
+
+.btn-sky {
+     background-color: #25c6ff;
+     color: #fff;
+}
+
+.btn {
+    outline: none;
+}
+
+.close-sign {
+    color: #fff;
+    cursor: pointer;
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    font-size: 13px;
+    transition: color 0.3s ease
+}
+
+.close-sign:hover,
+.close-sign:focus {
+    color: #ff0000;
+}
+
+.to-display {
+    cursor: pointer;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    color: #fff;
+    padding: 4px 10px;
+    width: 60px;
+    border: 2px solid 
+    #dfebf2;
+    border-radius: 5px;
+    transition: color 0.4s ease-out, border-color 0.4s ease-out
+}
+
+.to-display:focus,
+.to-display:hover {
+    color: #25c6ff;
+    border-color: #25c6ff;
+}
+/* login form end */
+
 /* @import url(https://fonts.googleapis.com/css?family=Lato:400, 700); */
 *,
 *:before,
