--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -440,11 +440,13 @@ li {
       /* жирный текст кнопки */
       background: #6a6c75;
       /* цвет фона кнопки отправить  */
+      transition-duration: .5s;
       &:hover {
         /*  Цвет букв меняется при навелении курсора на кнопку  */
         color: #0000ff;
         /*  Цвет букв меняется при навелении курсора на кнопку  */
         -webkit-transform: scale(1.2);
+        transition-duration: .5s;
         /*  увеличение при навелении курсора на кнопку  */
       }
       &:active {
