--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -285,8 +285,12 @@ li {
     }
   }
   
+
+.chat {
+    cursor: auto !important;
+}
+
   /* -------------------------------ХЕДЕР ЧАТА (ПРАВЫЙ ХЕДЕР)------------------------------------------ */
-  
   .clearfix {
     cursor: pointer;
 
